--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="menu">
             <div class="logo">
-                <a href="#">Your name</a>
+                <a href="#">Nixon wijaya X.3</a>
             </div>
 
             <ul>
